2004-03-10  Tor Lillqvist  <tml@iki.fi>

	* gdk/win32/gdkevents-win32.c (build_key_event_state): Set also
	the pointer button bits. (#136636, Dave Neary)

	* gdk/win32/gdkwindow-win32.c (show_window_internal): Show
	transparent (input only) windows using SetWindowPos(). (#132331,
	John Ehresman)

	(gdk_window_set_type_hint): For splash screens, remove the resize
	handles, menu, and minimize/maximize/close buttons. (#132896)

Wed Mar 10 22:30:23 2004  Matthias Clasen  <maclas@gmx.de>

	* gtk/gtkcellview.c (gtk_cell_view_cell_layout_clear): Keep the
	cell_list in a consistent state while iterating over it, since
	clear_attributes() also iterates over it.  (#136585, Morten Welinder)

2004-03-10  Mark McLoughlin  <mark@skynet.ie>

	* gtk/gtkexpander.c: (gtk_expander_expose): don't propagate
	the expose to the label. The expose handler for GtkContainer
	already does that. Fixes bug #136719. Reported by Dennis
	Cranston, exact cause nailed down by Owen.

2004-03-10  Federico Mena Quintero  <federico@ximian.com>

	* gtk/gtkfilechooserdefault.c (list_mtime_data_func): Use an
	untranslatable "%x" for dates, rather than a custom format.  Fixes
	#136357.

2004-03-10  Morten Welinder  <terra@gnome.org>

	* gtk/gtkfilechooserdefault.c
	(gtk_file_chooser_default_add_shortcut_folder): Test validity of
	path here.
	(shortcuts_insert_path): Don't check here.
	(get_file_info): Barf if name-only fails.

	* tests/testfilechooser.c (main): Add support for --multiple.

Wed Mar 10 02:41:05 2004  Jonathan Blandford  <jrb@gnome.org>

	* gtk/gtkpathbar.c: (gtk_path_bar_init), (gtk_path_bar_class_init),
	(remove_settings_signal), (gtk_path_bar_dispose),
	(gtk_path_bar_style_set), (gtk_path_bar_screen_changed),
	(gtk_path_bar_scroll_up), (reload_icons), (change_icon_theme),
	(settings_notify_cb), (gtk_path_bar_check_icon_theme),
	(get_button_image), (gtk_path_bar_update_button_appearance),
	(make_directory_button), (gtk_path_bar_check_parent_path): Support
	changes in icon themes.
